Added the beginning of a xml file that will control what classes and/or methods to hook into.

--- a/Patcherv2/Patcherv2.csproj
+++ b/Patcherv2/Patcherv2.csproj
@@ -50,5 +50,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Resources\ClassesToHook.xml" />
+    <None Include="Resources\ClassesToHook.xsd" />
   </ItemGroup>
 </Project>
